--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 [
                     { nombre: 'Daniel', apellido: 'Sánchez', dni: 20442873, correo: 'danielsanchez68@hotmail.com' },
                     //Agregar aquí nombre, apellido, dni y correo en formato objeto 
+                    { nombre: 'Tomas', apellido: 'Berias', dni: 41664217, correo: 'tomas.berias1@hotmail.com' },
                 ]
         },
         computed: {
